--- a/Puntos/Punto1.ipynb
+++ b/Puntos/Punto1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "750fe480",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
          "type": "integer"
         }
        ],
-       "ref": "06f2cd90-e825-4ccb-b191-be755d7ef1ad",
+       "ref": "c4d2f8b9-708b-4c32-b708-0ad7e7357e9c",
        "rows": [
         [
          "0",
@@ -1159,17 +1159,17 @@
        "[2000 rows x 13 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_path = \"files/ads_spend_modified.csv\"\n",
+    "csv_path = \"../files/ads_spend_modified.csv\"\n",
     "\n",
     "df = pd.read_csv(csv_path)\n",
     "\n",
-    "con = duckdb.connect(\"files/ads.duckdb\")\n",
+    "con = duckdb.connect(\"../files/ads.duckdb\")\n",
     "\n",
     "df"
    ]
@@ -1204,7 +1204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "shadowlights-A7EySYNq-py3.11",
    "language": "python",
    "name": "python3"
   },
