Punto3: Creacion de consulta mediante modelo al cual se le pasa parametros por medio de la consola y creacion de endpoint utilizando FastAPI elcual se le pasan los parametros por url.

--- a/Puntos/Punto2.ipynb
+++ b/Puntos/Punto2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "30036dcc",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4da14ed6",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "35fcbd15",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
          "type": "integer"
         }
        ],
-       "ref": "4f4f3493-052b-48ee-9038-242c3309b3a3",
+       "ref": "205e5573-3195-4ffb-919e-df6fdee9ec99",
        "rows": [
         [
          "0",
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c13881b5",
    "metadata": {},
    "outputs": [
@@ -620,7 +620,7 @@
          "type": "float"
         }
        ],
-       "ref": "633be349-5f13-4f55-87e4-b37d4c6fed83",
+       "ref": "dea17aed-abea-4346-8a72-9452262637ad",
        "rows": [
         [
          "0",
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ad196d35",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1147,7 @@
          "type": "float"
         }
        ],
-       "ref": "e69e9a70-525d-49eb-a86c-5f99ad0a6cfa",
+       "ref": "2cbe72fd-71cc-4abf-85ef-dbc5496f23db",
        "rows": [
         [
          "0",
@@ -1606,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "88c95914",
    "metadata": {},
    "outputs": [
@@ -1645,7 +1645,7 @@
          "type": "float"
         }
        ],
-       "ref": "26fa48aa-3b3b-4085-90c2-a0c32a29c1c5",
+       "ref": "31f55422-8ec0-4824-909a-6fc91a00deb9",
        "rows": [
         [
          "0",
@@ -1735,7 +1735,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "shadowlights-A7EySYNq-py3.11",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1749,7 +1749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
