--- a/Puntos/Punto1.ipynb
+++ b/Puntos/Punto1.ipynb
@@ -1165,11 +1165,11 @@
     }
    ],
    "source": [
-    "csv_path = \"../files/ads_spend_modified.csv\"\n",
+    "csv_path = \"../../files/ads_spend_modified.csv\"\n",
     "\n",
     "df = pd.read_csv(csv_path)\n",
     "\n",
-    "con = duckdb.connect(\"../files/ads.duckdb\")\n",
+    "con = duckdb.connect(\"../../files/ads.duckdb\")\n",
     "\n",
     "df"
    ]
@@ -1204,7 +1204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "shadowlights-A7EySYNq-py3.11",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1218,7 +1218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
